[PAGOPA-930] fix: unified duplicated model
